Text on Curve Scaling Issue #74701

Closed
opened 2020-03-12 23:32:16 +01:00 by Roel Koster · 11 comments
Member

System Information
Operating system: Ubuntu Linux 19.10
Graphics card: NVidia 1060 Ti

Blender Version
Broken: daily build
Worked: 2.97

Short description of error
When Assigning "Text on Curve" to a Text and then scale the assigned curve, the text will not follow the scale.
Only after reselecting the (same) "Text on Curve" curve things are refreshed/updated

Exact steps for others to reproduce the error

  • Create Bezier Circle (*or any other curve)
  • Create Text
  • Assign Bezier Circle* to Text->Font->Transform->Text on Curve
  • Scale Bezier Circle* in Object Mode
  • Observe Text not following scale of the circle*
  • Reselect same Bezier Circle* in Text->Font->Transform->Text on Curve
  • Observe Text refreshing to the correct size

I also noticed that when using other transforms (move/rotate) the curve* the text will not follow either. This is the same behaviour in 2.79 so I guess this is a design choice? Or is this faulty behaviour too? It looks odd, that's for sure ;-)

Thanks for looking into it,
Roel

**System Information** Operating system: Ubuntu Linux 19.10 Graphics card: NVidia 1060 Ti **Blender Version** Broken: daily build Worked: 2.97 **Short description of error** When Assigning "Text on Curve" to a Text and then scale the assigned curve, the text will not follow the scale. Only after reselecting the (same) "Text on Curve" curve things are refreshed/updated **Exact steps for others to reproduce the error** - Create Bezier Circle (*or any other curve) - Create Text - Assign Bezier Circle* to Text->Font->Transform->Text on Curve - Scale Bezier Circle* in Object Mode - Observe Text not following scale of the circle* - Reselect same Bezier Circle* in Text->Font->Transform->Text on Curve - Observe Text refreshing to the correct size I also noticed that when using other transforms (move/rotate) the curve* the text will not follow either. This is the same behaviour in 2.79 so I guess this is a design choice? Or is this faulty behaviour too? It looks odd, that's for sure ;-) Thanks for looking into it, Roel
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Please add a simple blend file that can demonstrate the bug with some steps

Please add a simple blend file that can demonstrate the bug with some steps
Member

Also, your "working" version is not released yet :p

Also, your "working" version is not released yet :p
Author
Member

Really?

The exact steps as described in the message will take you/normal user about 5 seconds..
But to make life easy for you.. I will take the time and make a Youtube Video showing the bug.. maybe that's enough to "confirm" it...
And this feature is broken since 2.8x not "yesterday"
https://youtu.be/6nGQqfRPSjo

Really? The exact steps as described in the message will take you/normal user about 5 seconds.. But to make life easy for you.. I will take the time and make a Youtube Video showing the bug.. maybe that's enough to "confirm" it... And this feature is broken since 2.8x not "yesterday" https://youtu.be/6nGQqfRPSjo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-03-13 09:58:05 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...

This issue was referenced by 7e9575f7a1

This issue was referenced by 7e9575f7a16caa408102897ae8f14b6c61f9369c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74701
No description provided.